Shifted swiper-js next-slider arrow to the right. Bug fix #2 fixed.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1059,7 +1059,7 @@ img{
         left: -3.5rem;
     }
 
-    .swiper-button-prev{
+    .swiper-button-next{
         right: -3.5rem;
     }
 
